<resources>
    <string name="app_name">Student Portal</string>
    <string name="student_portal_welcome_page">Student Portal Welcome Page</string>
    <string name="welcome">Roehampton QA Student Portal App</string>
    <string name="button">Start</string>
    <string name="student_login_page">Student Login Page</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="password_verify">Password Verify</string>
    <string name="log_in">Log in</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="group">Group</string>
    <string name="f3">F3</string>
    <string name="lg2">Lg2</string>
    <string name="lg1">Lg1</string>
    <string name="g">G</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_dashboard">Welcome to your Dashboard</string>
    <string name="dashboard_tx_view">Over 175 years of history in higher education through four historic colleges</string>
    <string name="roehampton">Roehampton</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="_9_30_11_20"> 09:30 - 11:20 </string>
    <string name="lg1_01">Lg1-01</string>
    <string name="lg1_05">Lg1-05</string>
    <string name="_101">101</string>
    <string name="lg1_04">Lg1-04</string>
    <string name="_102">102</string>
    <string name="_204">204</string>
    <string name="_203">203</string>
    <string name="press_room_number_to_get_more_info">Press Room Number To Get More Info</string>
    <string name="f">f</string>
    <string name="navigate">Navigate</string>
    <string name="textview">TextView</string>
    <string name="_202">202</string>
    <string name="lg1_02">Lg1-02</string>
    <string name="_18_30_20_30"> 18:30 - 20:30 </string>
    <string name="_16_30_18_20"> 16:30 - 18:20 </string>
    <string name="_14_30_16_20"> 14:30 - 16:20 </string>
    <string name="_11_30_13_20"> 11:30 - 13:20 </string>
    <string name="map">   </string>
    <string name="tab">   </string>
    <string name="lib">   </string>
    <string name="web">   </string>
    <string name="todo">TODO</string>
    <string name="category">category</string>
    <string name="author">author</string>
    <string name="title">title</string>
    <string name="isbn">isbn</string>
    <string name="imgPlan">imgPlan.png</string>
    <string name="you_are_here">You are here!</string>
    <string name="reviews">Reviews</string>
    <string-array name="groups">
        <item>RUG0001CS - Computer Science</item>
        <item>RUG0002CS - Computer Science</item>
        <item>RUG0001BT - Business and Tourism</item>
        <item>RUG0002BT - Business and Tourism</item>
        <item>RUG0001BM - Business and Marketing</item>
        <item>RUG0002BM - Business and Marketing</item>
    </string-array>
</resources>
