<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/student_light_blue"
    tools:context=".Dashboard">

    <Button
        android:id="@+id/id4_dash_map"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/student_light_green"
        android:drawableTop="@drawable/floorplanicon"
        android:paddingTop="6dp"
        android:text="@string/map"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id4_dash_timetable"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id4_dash_timetable"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/student_light_green"
        android:drawableTop="@drawable/timetable"
        android:paddingTop="6dp"
        android:text="@string/tab"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id4_dash_library"
        app:layout_constraintStart_toEndOf="@+id/id4_dash_map" />

    <Button
        android:id="@+id/id4_dash_library"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/student_light_green"
        android:drawableTop="@drawable/libicon"
        android:paddingTop="6dp"
        android:text="@string/lib"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id4_dash_web"
        app:layout_constraintStart_toEndOf="@+id/id4_dash_timetable" />

    <Button
        android:id="@+id/id4_dash_web"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/student_light_green"
        android:drawableTop="@drawable/web"
        android:paddingTop="6dp"
        android:text="@string/web"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id4_dash_library" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/welcome_dashboard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/studrecreationpage"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/dashboard_tx_view"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/roehampton"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/id4_dash_timetable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>